# code-interpreter

./: .dockerignore  .gitignore  .jscpd.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  e2e.sh  openapi.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/sync-deps/: action.yml
.github/workflows/: ci-image.yml  ci.yml  docker.yml
docs/: ARCHITECTURE.md
e2e/: README.md  run_all.sh  test_bash.sh  test_cpp.sh  test_go.sh  test_node.sh  test_python.sh  test_typescript.sh  test_unsupported_lang.sh
scripts/: generate_openapi.py  quickstart.sh
src/mcp_code_interpreter/: __init__.py  execution_service.py  kernel_fs_alias.py  kernel_manager.py  process_runner.py  server.py  session_registry.py  utils.py
src/mcp_code_interpreter/capabilities/: __init__.py  libraries.py
tests/: conftest.py  test_execution.py  test_file_management.py  test_mcp_client.py  test_mnt_data_alias.py  test_process_runner.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css  types.ts
